--- a/cloudformation/lif-graphql-taskdef-includes.yml
+++ b/cloudformation/lif-graphql-taskdef-includes.yml
@@ -5,7 +5,8 @@ Environment:
   - Name: LIF_GRAPHQL_ROOT_TYPE_NAME
     Value: Person
   - Name: LIF_MDR_API_URL
-    Value: "https://mdr-api.lif.unicon.net"
+    Value:
+      Fn::Sub: "https://mdr-api.${PublicHostedZoneName}"
   - Name: LIF_QUERY_TIMEOUT_SECONDS
     Value: 300
   - Name: OPENAPI_DATA_MODEL_ID
