--- a/cloudformation/lif-mdr-api-taskdef-includes.yml
+++ b/cloudformation/lif-mdr-api-taskdef-includes.yml
@@ -1,6 +1,7 @@
 Environment:
   - Name: CORS_ALLOW_ORIGINS
-    Value: "http://localhost:3000,http://localhost:5173,http://localhost:8080,https://mdr.lif.unicon.net,https://mdr.demo.lif.unicon.net/"
+    Value: 
+      Fn::Sub: "http://localhost:3000,http://localhost:5173,http://localhost:8080,https://mdr.${PublicHostedZoneName}"
   - Name: CORS_ALLOW_CREDENTIALS
     Value: true
   - Name: CORS_ALLOW_METHODS
