Issue #33: Update pre-commit to run unit tests; fix three failing dagster tests

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -23,3 +23,12 @@ repos:
     hooks:
       - id: cspell
         exclude: cspell.json
+  - repo: local
+    hooks:
+      - id: pytest
+        name: Run Pytest
+        entry: uv run pytest test
+        language: system
+        types: [python]
+        pass_filenames: false
+        always_run: true
