Issue #57: Fix Advisor API startup failure due to langchain dependencies issue

--- a/projects/lif_advisor_api/pyproject.toml
+++ b/projects/lif_advisor_api/pyproject.toml
@@ -11,7 +11,7 @@ requires-python = ">=3.13,<3.14"
 dependencies = [
     "fastapi~=0.115",
     "langchain~=0.3",
-    "langchain-mcp-adapters~=0.1",
+    "langchain-mcp-adapters>=0.1.14,<0.2.0",
     "langchain-openai~=0.3",
     "langgraph~=0.4",
     "langgraph-prebuilt~=0.2",
