--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,7 +16,7 @@ dependencies = [
     "jsonref~=1.1",
     "jsonschema~=4.25",
     "langchain~=0.3",
-    "langchain-mcp-adapters~=0.1",
+    "langchain-mcp-adapters>=0.1.14,<0.2.0",
     "langchain-openai~=0.3",
     "langgraph~=0.4",
     "langgraph-prebuilt~=0.2",
